tests/integration/snapshots/build/build_cmd_diagnostics_tests/build_aggregates_multiple_contract_compile_errors_with_per_contract_sections.stderr.txt
Error: In broken_syntax:

[ROOT]/contracts/broken_syntax[LINE]: error: expected <expression>, got `;`
   2 |     val broken = ;
     |                  ^

In missing_symbol:

[ROOT]/contracts/missing_symbol[LINE]: error: undefined symbol `missing_identifier`

    // in function `onInternalMessage`
   2 |     val x = missing_identifier;
     |             ^^^^^^^^^^^^^^^^^^

Build failed with 2 errors
